--- a/css/google-airpods.webflow.css
+++ b/css/google-airpods.webflow.css
@@ -152,6 +152,8 @@
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5)));
+  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
 }
 
 .div-block {
@@ -335,7 +337,7 @@
 
 .paragraph {
   position: relative;
-  color: #fff;
+  color: #7e7e7e;
   font-size: 16px;
   line-height: 28px;
 }
@@ -383,7 +385,7 @@
 .cover {
   position: absolute;
   z-index: 0;
-  width: 130vw;
+  width: auto;
   height: 100vh;
   min-width: 1250px;
   -webkit-box-pack: center;
@@ -397,12 +399,11 @@
   border-style: solid;
   border-color: #fff;
   border-radius: 20px;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.47)), to(rgba(0, 0, 0, 0.47))), url('../images/google-pods-sec2.svg');
-  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.47), rgba(0, 0, 0, 0.47)), url('../images/google-pods-sec2.svg');
-  background-position: 0px 0px, 50% 50%;
-  background-size: auto, cover;
-  background-repeat: repeat, no-repeat;
-  background-attachment: scroll, scroll;
+  background-image: url('../images/google-pods-sec2.svg');
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
   -webkit-transform-origin: 50% 50%;
   -ms-transform-origin: 50% 50%;
   transform-origin: 50% 50%;
@@ -1760,15 +1761,19 @@
 }
 
 .heading-7 {
-  color: #fff;
+  color: #7e7e7e;
 }
 
 .heading-8 {
-  color: #fff;
+  color: #7e7e7e;
 }
 
 .section {
   background-color: #000;
+}
+
+.paragraph-3 {
+  color: #fff;
 }
 
 @media (max-width: 991px) {
